// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-sort-control #render Not sorted 1`] = `
<gux-sort-control>
  <template shadowrootmode="open">
    <div class="gux-container">
      <button aria-label="Column Header 1 . The table is not currently sorted by this column. Click the column header to sort the table by this column in ascending order" class="gux-sort-button" type="button">
        <gux-icon class="gux-sort-icon" decorative="" icon-name="fa/caret-up-solid" size="small"></gux-icon>
      </button>
      <div class="gux-resize-spacer"></div>
    </div>
  </template>
</gux-sort-control>
`;

exports[`gux-sort-control #render Sorted ascending 1`] = `
<gux-sort-control>
  <template shadowrootmode="open">
    <div class="gux-active gux-container">
      <button aria-label="Column Header 1 . The table is currently sorted by this column in ascending order. Click the column header to sort the table by this column in descending order" class="gux-sort-button" type="button">
        <gux-icon class="gux-sort-icon" decorative="" icon-name="fa/caret-up-solid" size="small"></gux-icon>
      </button>
      <div class="gux-resize-spacer"></div>
    </div>
  </template>
</gux-sort-control>
`;

exports[`gux-sort-control #render Sorted descending 1`] = `
<gux-sort-control>
  <template shadowrootmode="open">
    <div class="gux-active gux-container">
      <button aria-label="Column Header 1 . The table is currently sorted by this column in descending order. Click the column header to sort the table by this column in ascending order" class="gux-sort-button" type="button">
        <gux-icon class="gux-sort-icon" decorative="" icon-name="fa/caret-down-solid" size="small"></gux-icon>
      </button>
      <div class="gux-resize-spacer"></div>
    </div>
  </template>
</gux-sort-control>
`;

exports[`gux-sort-control #render Sorted descending, unsorted allowed 1`] = `
<gux-sort-control include-unsorted="">
  <template shadowrootmode="open">
    <div class="gux-active gux-container">
      <button aria-label="Column Header 1 . The table is currently sorted by this column in descending order. Click the column header to not sort the table by this column" class="gux-sort-button" type="button">
        <gux-icon class="gux-sort-icon" decorative="" icon-name="fa/caret-down-solid" size="small"></gux-icon>
      </button>
      <div class="gux-resize-spacer"></div>
    </div>
  </template>
</gux-sort-control>
`;
